# tic-tac-toe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: testing.yaml
tests/: conftest.py  test_converters.py  test_game_api.py  test_game_contorller.py  test_game_schema.py
tic_tac_toe/: errors.py  main.py
tic_tac_toe/api/api_v1/: api.py
tic_tac_toe/api/api_v1/endpoints/: game.py
tic_tac_toe/core/: board.py  config.py
tic_tac_toe/crud/: game.py
tic_tac_toe/db/: db.py  models.py
tic_tac_toe/game/: game_controller.py
tic_tac_toe/schemas/: game.py
tic_tac_toe/utils/: converters.py
